--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "npx tsc && rsync -av --exclude='*.ts' browser-extension/ dist/"
+    "build": "npx tsc && rsync -av --exclude='*.ts' browser-extension/ dist/"
   },
   "author": "",
   "license": "ISC",
