--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "@types/firefox-webext-browser": "^120.0.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "webextension-polyfill": "^0.12.0"
   }
 }
